2003-10-10  Christopher Faylor  <cgf@redhat.com>

	* fhandler_tty.cc (fhandler_tty_slave::open): Don't create a new window
	station if one already exists.

2003-10-10  Christopher Faylor  <cgf@redhat.com>

	* shared.cc (shared_info::initialize): Remove myself check since
	hMainProc initialization will allow user initialization to work.

2003-10-09  Yitzchak Scott-Thoennes <sthoenna@efn.org>

	* include/sys/mman.h (MAP_FAILED): Define as void *.

2003-10-08  Christopher Faylor  <cgf@redhat.com>

	* dcrt0.cc (hMainProc): Initialize to useful value for use when dll is
	dynamically loaded.
	* shared.cc (shared_info::initialize): Don't initialize user stuff if
	myself doesn't exist.

2003-10-08  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (unlink): Don't even try DELETE_ON_CLOSE technique on
	systems not supporting it.

2003-10-02  Christopher Faylor  <cgf@redhat.com>

	* dcrt0.cc (dll_crt0_1): Call newlib __sinit routine to ensure that
	stdio buffers are initialized to avoid thread initialization races.

2003-10-01  Christopher Faylor  <cgf@redhat.com>

	* path.cc (win32_device_name): Only fill out destination buffer when
	it's really a device.

2003-09-30  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Add YA method for generating devices.cc.
	* child_info.h: YA update of another magic number.
	* gendevices: New file.
	* devices.in: New file.
	* devices.cc: Regenerate.
	* devices.shilka: Remove.
	* devices.h: Correctly define device pointers.
	(device): Remove now obsolete fields.
	(device::native): Renamed from device::fmt.
	* dtable.cc (build_fh_dev): Simplify in light of new unit parsing
	scheme.
	(build_fh_pc): Ditto.
	* path.cc (win32_device_name): Ditto.
	* fhandler.h (fhandler_base::get_native_name): Reflect renaming of fmt
	to native.
	* fhandler_tty.cc (fhandler_tty_mster::init): Initialize slave device
	prior to reporting unit.

2003-09-30  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::fstat): Drop FH_FLOPPY case.